--- a/myconfig/i3/config
+++ b/myconfig/i3/config
@@ -19,9 +19,10 @@ font pango:monospace 8
 # ----------------------------------------------------------------------------
 #                   autostart software when start i3
 # ----------------------------------------------------------------------------
-exec --no-startup-id compton -b 
-exec_always --no-startup-id feh --bg-scale "/home/mobvoi/Pictures/M4A1-001.png"
+exec --no-startup-id compton -b
+exec_always --no-startup-id feh --bg-scale "~/Pictures/wallpaper/M4A1-001.png"
 exec --no-startup-id /usr/bin/google-chrome-stable
+exec --no-starup-id /usr/bin/synergy
 # exec --no-startup-id /usr/local/bin/idea
 # exec --no-startup-id /usr/bin/netease-cloud-music
 #exec --no-startup-id LANG="zh_CN.UTF-8" fcitx &
@@ -48,16 +49,18 @@ bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # printscreen--scrot(Print=PrtSc/PrintScreen)
-bindsym $mod+Print exec scrot
-bindsym $mod+p exec scrot -s
+bindsym Print exec scrot -e 'mv $f ~/Pictures/screenshot'
+bindsym --release $mod+Print exec --no-startup-id scrot -s -e 'mv $f ~/Pictures/screenshot'
+bindsym $mod+Ctrl+Up exec --no-startup-id amixer -c 0 -q set Master 2dB+ unmute
+bindsym $mod+Ctrl+Down exec --no-startup-id amixer -c 0 -q set Master 2dB- unmute
 
 #exec kill focused window
-bindsym $mod+Shift+q kill 
+bindsym $mod+Shift+q kill
 
 bindsym $mod+m bar mode toggle
 bindsym $mod+u border toggle
 
-# bindsym mod1+F2 exec --no-startup-id xfce4-appfinder 
+# bindsym mod1+F2 exec --no-startup-id xfce4-appfinder
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -92,7 +95,7 @@ bindsym $mod+t split h
 bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen 
+bindsym $mod+f fullscreen
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
@@ -148,8 +151,17 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
-bindsym $mod+r mode "resize"
+# ----------------------------------------------------------------------------
+#                   software location config
+# ----------------------------------------------------------------------------
+#注意软件名设置及大小写
+assign [class="Google-chrome"] 3
+assign [class="idea"] 2
+assign [class="cloud-music"] 4
+assign [class="Synergy"] 10
+#assign [class="Xfce4-terminal"] 5
 
+bindsym $mod+r mode "resize"
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -178,13 +190,18 @@ mode "resize" {
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    status_command i3status --config ~/.config/i3status/config 
+    status_command i3status --config ~/.config/i3/i3status.conf
     status_command exec ~/.config/i3/net-speed.sh
+#    status_command i3locks -c ~/.config/i3locks/config
 #    i3bar_command i3bar -t
 #   status_command exec ~/.i3/net-speed.sh
 	workspace_buttons yes
+#   position top
+#   mode hide
+#   tray_padding 0
+#   separator_symbol "|"
 
- 
+
 	colors {
         background #10101000
         statusline #FFFFFF
@@ -204,7 +221,7 @@ bar {
 set $mode_system  lock(L) logout(O) reboot(R) shutdown(S) exit(Esc)
 bindsym $mod+c mode "$mode_system"
 mode "$mode_system" {
-    bindsym l exec --no-startup-id i3lock -c '#000000', mode "default"
+    bindsym l exec --no-startup-id i3lock -i ~/Pictures/wallpaper/star-river.png, mode "default"
     bindsym o exec --no-startup-id i3-msg exit, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
     bindsym s exec --no-startup-id systemctl poweroff, mode "default"
@@ -215,7 +232,7 @@ mode "$mode_system" {
 exec --no-startup-id xset dpms 600
 
 # ----------------------------------------------------------------------------
-#                   lauch software 
+#                   lauch software
 # ----------------------------------------------------------------------------
 set $mode_launch [g]oogle [i]dea [n]etease [x]fce4-terminal [t]ypora
 bindsym $mod+o mode "$mode_launch"
@@ -228,15 +245,6 @@ bindsym g exec --no-startup-id google-chrome-stable ,mode "default"
    bindsym t exec --no-startup-id typora ,mode "default"
    bindsym Escape mode "default"
 }
-
-# ----------------------------------------------------------------------------
-#                   software location config
-# ----------------------------------------------------------------------------
-#注意软件名设置及大小写
-assign [class="Google-chrome"] 3
-assign [class="idea"] 2
-assign [class="cloud-music"] 4
-#assign [class="Xfce4-terminal"] 5
 
 # ----------------------------------------------------------------------------
 #                   auto floating software
