--- a/myconfig/tmux/tmux.conf
+++ b/myconfig/tmux/tmux.conf
@@ -6,6 +6,15 @@ set -g default-terminal "screen-256color"
 set -g prefix C-x
 unbind C-b
 
+set-option -g status-keys vi
+set-option -g status-utf8 on
+set-option -g status-interval 1
+set-option -g status-justify “centre”
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+#set-option -g status-left "#(/opt/data/soft/tmux-powerline/powerline.sh left)"
+#set-option -g status-right "#(/opt/data/soft/tmux-powerline/powerline.sh right)"
+
 #--------------------------------------------------------------------
 #                   reload config file
 #--------------------------------------------------------------------
@@ -35,8 +44,9 @@ bind -r ^l resizep -R 10
 #--------------------------------------------------------------------
 #                   pane operation
 #--------------------------------------------------------------------
-bind ^v splitw -v
-bind ^h splitw -h
 unbind '"'
 unbind %
+bind ^v splitw -v
+bind ^h splitw -h
 
+bind ^s setw synchronize-panes
