--- a/myconfig/tmux/tmux.conf
+++ b/myconfig/tmux/tmux.conf
@@ -1,17 +1,20 @@
 #--------------------------------------------------------------------
 #                   base config
 #--------------------------------------------------------------------
+#set -g default-terminal "xterm-256color"
 set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 #set-option -g status-utf8 on
 set -g prefix C-x
 unbind C-b
+bind C-x send-prefix
 
 set-option -g status-keys vi
-set-option -g status-utf8 on
-set-option -g status-interval 1
-set-option -g status-justify “centre”
-set-option -g status-left-length 60
-set-option -g status-right-length 90
+#set-option -g status-utf8 on
+#set-option -g status-interval 1
+#set-option -g status-justify “centre”
+#set-option -g status-left-length 60
+#set-option -g status-right-length 90
 #set-option -g status-left "#(/opt/data/soft/tmux-powerline/powerline.sh left)"
 #set-option -g status-right "#(/opt/data/soft/tmux-powerline/powerline.sh right)"
 
@@ -47,6 +50,6 @@ bind -r ^l resizep -R 10
 unbind '"'
 unbind %
 bind ^v splitw -v
-bind ^h splitw -h
+bind ^i splitw -h
 
 bind ^s setw synchronize-panes
