--- a/myconfig/i3/config
+++ b/myconfig/i3/config
@@ -27,7 +27,6 @@ exec --no-startup-id /usr/bin/synergy
 exec --no-startup-id /usr/bin/sakura
 exec --no-startup-id /usr/bin/guake
 exec --no-startup-id /usr/local/bin/myidea
-exec --no-startup-id /usr/bin/redshift
 # exec --no-startup-id /usr/bin/netease-cloud-music
 #exec --no-startup-id LANG="zh_CN.UTF-8" fcitx &
 #exec --no-startup-id xcompmgr &
@@ -256,7 +255,7 @@ bindsym g exec --no-startup-id google-chrome-stable ,mode "default"
 # for_window [class="Main.py"] floating enable
 for_window [instance="guake"] floating enable
 for_window [class="Xfce4-terminal"] floating enable
-for_window [class="Typora"] floating enable
+#for_window [class="Typora"] floating enable
 for_window [class="Go-for-it"] floating enable
 for_window [class="feh"] floating enable
 for_window [instance="youdao-dict"] floating enable
