--- a/emacs.conf
+++ b/emacs.conf
@@ -1,5 +1,12 @@
 
 ;; 设置文件编码为 utf-8
+
+;; Added by Package.el.  This must come before configurations of
+;; installed packages.  Don't delete this line.  If you don't want it,
+;; just comment it out by adding a semicolon to the start of the line.
+;; You may delete these explanatory comments.
+(package-initialize)
+
 (prefer-coding-system 'utf-8)
 (set-default-coding-systems 'utf-8)
 (set-terminal-coding-system 'utf-8)
@@ -16,4 +23,27 @@
 (global-set-key (kbd "C-c a") 'org-agenda)
 (global-set-key (kbd "C-c c") 'org-capture)
 
+;; 设置 org mode 的默认折叠方式
 (setq org-startup-folded 'content)
+;; 配置org todo 关键字
+(setq org-todo-keywords '((sequence "TODO" "DOING" "DONE")))
+(setq org-todo-keyword-faces '(("TODO" . "red")
+                               ("DOING" . "yellow")
+                               ("DONE" . "green")))
+;; 配置自动备份
+(setq backup-directory-alist '(("." . "~/.emacs.d/backup"))
+  backup-by-copying t    ; Don't delink hardlinks
+  version-control t      ; Use version numbers on backups
+  delete-old-versions t  ; Automatically delete excess backups
+  kept-new-versions 20   ; how many of the newest versions to keep
+  kept-old-versions 5    ; and how many of the old
+  )
+;; (setq make-backup-files nil)
+
+(fset 'yes-or-no-p'y-or-n-p)
+
+;; org 模式下自动断行（line wrap）
+(add-hook 'org-mode-hook (lambda () (setq truncate-lines nil)))
+
+;; 高亮当前行
+(global-hl-line-mode t)
