--- a/mac/alfred/config/workflows/user.workflow.A62400D3-8F90-40E8-9EC1-E557BAE256A0/info.plist
+++ b/mac/alfred/config/workflows/user.workflow.A62400D3-8F90-40E8-9EC1-E557BAE256A0/info.plist
@@ -11,7 +11,7 @@
 	<key>description</key>
 	<string>Alfred's script filter object is extremely powerful, and gives you control over the results displayed in Alfred</string>
 	<key>disabled</key>
-	<false/>
+	<true/>
 	<key>name</key>
 	<string>Script Filter - Getting Started</string>
 	<key>objects</key>
@@ -21,6 +21,12 @@
 			<dict>
 				<key>alfredfiltersresults</key>
 				<true/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<false/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
 				<key>argumenttype</key>
 				<integer>1</integer>
 				<key>escaping</key>
@@ -129,13 +135,19 @@ EOB</string>
 			<key>uid</key>
 			<string>50B0CD10-4D52-4898-9C05-DD3A34A829C3</string>
 			<key>version</key>
-			<integer>2</integer>
+			<integer>3</integer>
 		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
 				<key>alfredfiltersresults</key>
 				<true/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<false/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
 				<key>argumenttype</key>
 				<integer>1</integer>
 				<key>escaping</key>
@@ -247,7 +259,7 @@ EOB</string>
 			<key>uid</key>
 			<string>0B25B88F-4243-4E75-983B-36D1C96F4E94</string>
 			<key>version</key>
-			<integer>2</integer>
+			<integer>3</integer>
 		</dict>
 	</array>
 	<key>readme</key>
