--- a/mac/alfred/config/workflows/user.workflow.B785C534-BE09-4114-AEB0-3E910F34DF9D/info.plist
+++ b/mac/alfred/config/workflows/user.workflow.B785C534-BE09-4114-AEB0-3E910F34DF9D/info.plist
@@ -23,13 +23,13 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>falconkaze</string>
+	<string></string>
 	<key>description</key>
 	<string>连接公司的vpn</string>
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
-	<string>connect vpn</string>
+	<string>Connect vpn</string>
 	<key>objects</key>
 	<array>
 		<dict>
@@ -86,14 +86,14 @@
 			<key>xpos</key>
 			<integer>225</integer>
 			<key>ypos</key>
-			<integer>170</integer>
+			<integer>115</integer>
 		</dict>
 		<key>EADC2E4A-D422-492E-B951-6BA465093BF1</key>
 		<dict>
 			<key>xpos</key>
 			<integer>40</integer>
 			<key>ypos</key>
-			<integer>170</integer>
+			<integer>115</integer>
 		</dict>
 	</dict>
 	<key>webaddress</key>
