--- a/mac/alfred/config/workflows/user.workflow.B7A29016-65E6-4E42-B305-319C7216EEF6/info.plist
+++ b/mac/alfred/config/workflows/user.workflow.B7A29016-65E6-4E42-B305-319C7216EEF6/info.plist
@@ -132,7 +132,7 @@
 	<key>description</key>
 	<string>把当前URL用另外的浏览器打开</string>
 	<key>disabled</key>
-	<false/>
+	<true/>
 	<key>name</key>
 	<string>浏览器切换</string>
 	<key>objects</key>
@@ -226,6 +226,10 @@
 				<false/>
 				<key>focusedappvariablename</key>
 				<string></string>
+				<key>hotkey</key>
+				<integer>0</integer>
+				<key>hotmod</key>
+				<integer>0</integer>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
